<resources>
    <string name="app_name">FitnessApp1</string>
    <string name="button1"><b>Progress</b></string>
    <string name="button2"><b>Exercise</b></string>
    <string name="button3"><b>Statistics</b></string>
    <string name="select_type_of_exercise">Select type of exercise</string>

    <string-array name="object_array">
        <item>Select</item>
        <item>Abs</item>
        <item>Back</item>
        <item>Biceps</item>
        <item>Chest</item>
        <item>Glutes</item>
        <item>Quads</item>
        <item>Triceps</item>
    </string-array>

    <integer-array name="object_image">
        <item>@drawable/select</item>
        <item>@drawable/mainabs</item>
        <item>@drawable/mainback</item>
        <item>@drawable/mainbiceps</item>
        <item>@drawable/mainchest</item>
        <item>@drawable/mainglutes</item>
        <item>@drawable/mainquads</item>
        <item>@drawable/maintriceps</item>
    </integer-array>
    <string name="title_activity_main6">Main6Activity</string>
    <string name="todo">TODO</string>
    <string name="select_exercise">Select exercise</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="enter_weight">enter weight</string>
    <string name="button">Button</string>
    <string name="input_weight">Input Weight</string>
    <string name="submit">SUBMIT</string>

</resources>
